fixing footer getting over the main actions buttons & testing new opacity for not found page on mobile

--- a/desktop/frontend/styles/components/common/footer.css
+++ b/desktop/frontend/styles/components/common/footer.css
@@ -149,6 +149,12 @@ footer {
   }
 }
 
+@media (width <= 520px) {
+  footer {
+    z-index: 1;
+  }
+}
+
 @media (width <= 464px) {
   .footer--top--main-links {
     grid-template-columns: repeat(2, 1fr);
